Lego puzzle: Work on adding home model.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -70,6 +70,8 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <p>This allows us to construct the puzzle like so:</p>
   <p><img src="img/piece_steps2.png" style="width:90.0%" /> <img
   src="img/puzzle_box_steps.png" style="width:90.0%" /></p>
+  <p>Here’s the hodgepodge model I built with my kids’ Legos:</p>
+  <p><img src="img/home_model.jpg" /></p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
