Lego puzzle: Set up the spoiler warning image.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -48,6 +48,8 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   | <a
   href="http://tylerneylon.com/a/lego_puzzle/lego_puzzle.pdf">pdf</a>
   <span class="math inline">\(\,\)</span>]</p>
+  <h1 data-number="1" id="the-puzzle"><span
+  class="header-section-number">1</span> The Puzzle</h1>
   <p>Here’s a fun puzzle: Take six boxes, each <span
   class="math inline">\(1\times 2\times 2\)</span> in size, and find a
   way to pack them into a <span class="math inline">\(3\times 3\times
@@ -72,6 +74,17 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   src="img/puzzle_box_steps.png" style="width:90.0%" /></p>
   <p>Here’s the hodgepodge model I built with my kids’ Legos:</p>
   <p><img src="img/home_model.jpg" /></p>
+  <p>I’ll write a little about the math behind this puzzle below, but
+  for now I’ll give you a vertical break so you don’t accidentally see
+  the solution. Try out the puzzle first!</p>
+  <p>
+  <p>  </p>
+  <p><img src="img/here_be_spoilers.jpg" style="width:90.0%" /></p>
+  <p>
+  <p>  </p>
+  <h1 data-number="2" id="the-solution"><span
+  class="header-section-number">2</span> The Solution</h1>
+  <p>Next part of the article.</p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
