Lego puzzle: Add the solution image to article.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -84,7 +84,8 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <p>  </p>
   <h1 data-number="2" id="the-solution"><span
   class="header-section-number">2</span> The Solution</h1>
-  <p>Next part of the article.</p>
+  <p>Here’s the solution:</p>
+  <p><img src="img/soln_steps.svg" style="width:90.0%" /></p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
