Begin to integrate animation into the article.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -86,6 +86,8 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   class="header-section-number">2</span> The Solution</h1>
   <p>Here’s the solution:</p>
   <p><img src="img/soln_steps.svg" style="width:90.0%" /></p>
+  <svg width="10" height="10" version="1.1" style="background-color:#fff" id="solution" xmlns="http://www.w3.org/2000/svg">
+  </svg>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
@@ -97,5 +99,6 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
         height="320" style="background:white; height: 180px;
         margin-top:0;" frameborder="0" scrolling="no"></iframe>
     </div>
+    <script type="module" src="solution.js"></script>
   </body>
 </html>
