--- a/lego_puzzle/template.html
+++ b/lego_puzzle/template.html
@@ -54,5 +54,6 @@
         height="320" style="background:white; height: 180px;
         margin-top:0;" frameborder="0" scrolling="no"></iframe>
     </div>
+    <script type="module" src="solution.js"></script>
   </body>
 </html>
