Integrate new color scheme into the post.
Also some other minor formatting adjustments.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -63,11 +63,11 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   the 27 cubie spaces of the larger <span class="math inline">\(3\times
   3\times 3\)</span> volume. But the initial configurations I tried
   failed to fit more than five boxes in the space allowed:</p>
-  <p><img src="img/img2.svg" /></p>
+  <p><img src="img/img3.svg" style="width:40.0%" /></p>
   <p>You might be able to solve this by simply thinking about it. But
-  it’s even more fun to play with a physical model. Did you know that a
-  <span class="math inline">\(2\times 2\)</span> Lego brick with 2
-  tile-heights on top forms a perfect cube?</p>
+  it’s even more fun to play with a physical model.</p>
+  <p>Did you know that a <span class="math inline">\(2\times 2\)</span>
+  Lego brick with 2 tile-heights on top forms a perfect cube?</p>
   <p><img src="img/annotated_lego_cube.png" /></p>
   <p>This allows us to construct the puzzle like so:</p>
   <p><img src="img/piece_steps2.png" style="width:90.0%" /> <img
@@ -85,7 +85,7 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <h1 data-number="2" id="the-solution"><span
   class="header-section-number">2</span> The Solution</h1>
   <p>Here’s the solution:</p>
-  <p><img src="img/soln_steps.svg" style="width:90.0%" /></p>
+  <p><img src="img/solution_steps.svg" style="width:90.0%" /></p>
   <svg width="10" height="10" version="1.1" style="background-color:#fff" id="solution" xmlns="http://www.w3.org/2000/svg">
   </svg>
     </div>
