Start to make a face cubie image.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -88,6 +88,11 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <p><img src="img/solution_steps.svg" style="width:90.0%" /></p>
   <svg width="10" height="10" version="1.1" style="background-color:#fff" id="solution" xmlns="http://www.w3.org/2000/svg">
   </svg>
+  <p>The simplest way to characterize it is to notice that we’ve left
+  the central cubie unoccupied.</p>
+  <p>As pointed out by Knuth, there’s a nice observation that can help
+  you find this solution. Define a “face cubie” as one that’s adjacent
+  to the center cubie. There are 6 of these:</p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
