Resize the Lego one-cubie image.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -68,7 +68,7 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   it’s even more fun to play with a physical model.</p>
   <p>Did you know that a <span class="math inline">\(2\times 2\)</span>
   Lego brick with 2 tile-heights on top forms a perfect cube?</p>
-  <p><img src="img/annotated_lego_cube.png" /></p>
+  <p><img src="img/annotated_lego_cube.png" style="width:50.0%" /></p>
   <p>This allows us to construct the puzzle like so:</p>
   <p><img src="img/piece_steps2.png" style="width:90.0%" /> <img
   src="img/puzzle_box_steps.png" style="width:90.0%" /></p>
