--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -30,7 +30,7 @@
       <div class="title">A Simple 3D Puzzle</div>
       <div class="author">Tyler Neylon</div>
       <div class="date"><a
-href="https://tylerneylon.com/a/7date/">345.2023</a></div>
+href="https://tylerneylon.com/a/7date/">25.2024</a></div>
       
       \(\newcommand{\customstrut}{}\)
       \(\newcommand{\crossedouty}{\dot y \kern -5pt \scriptscriptstyle{\diagup\atop\vphantom{y}}}\)
@@ -69,14 +69,14 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   <p>Did you know that a <span class="math inline">\(2\times 2\)</span>
   Lego brick with 2 tile-heights on top forms a perfect cube?</p>
   <p><img src="img/annotated_lego_cube.png" style="width:50.0%" /></p>
-  <p>This allows us to construct the puzzle like so:</p>
+  <p>You can build a model of the puzzle like this:</p>
   <p><img src="img/piece_steps2.png" style="width:90.0%" /> <img
   src="img/puzzle_box_steps.png" style="width:90.0%" /></p>
   <p>Here’s the hodgepodge model I built with my kids’ Legos:</p>
   <p><img src="img/home_model.jpg" /></p>
   <p>I’ll write a little about the math behind this puzzle below, but
   for now I’ll give you a vertical break so you don’t accidentally see
-  the solution. Try out the puzzle first!</p>
+  the solution. Try to solve it first!</p>
   <p>
   <p>  </p>
   <p><img src="img/here_be_spoilers.jpg" style="width:90.0%" /></p>
@@ -144,8 +144,9 @@ href="https://tylerneylon.com/a/7date/">345.2023</a></div>
   directory hosted on github</a>.</p>
   <p>I rendered the Lego images with <a
   href="https://www.bricklink.com/v3/studio/download.page">Studio by
-  BrickLink</a>, which is awesome, and I’m grateful it’s free.</p>
-  <p>The dragon image (Here be Spoilers) was created with dall·e 2.</p>
+  BrickLink</a>, which is awesome. I’m grateful it’s free.</p>
+  <p>The dragon image (<em>Here be Spoilers</em>) was created with
+  dall·e 2.</p>
     </div>
         <div style="margin-top:40px">
         <hr style="margin-bottom:5px">
