Work on image sizing for both html/pdf output.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -54,7 +54,7 @@ href="https://tylerneylon.com/a/7date/">25.2024</a></div>
   class="math inline">\(1\times 2\times 2\)</span> in size, and find a
   way to pack them into a <span class="math inline">\(3\times 3\times
   3\)</span> cube.</p>
-  <p><img src="img/img1.svg" /></p>
+  <p><img src="img/img1.svg" style="width:75.0%" /></p>
   <p>I learned about this puzzle through Donald Knuth’s <em>The Art of
   Computer Programming,</em> <span class="math inline">\(\S
   7.2.2.1\)</span>. The six boxes have a total volume of 24 cubies (I’ll
@@ -63,17 +63,17 @@ href="https://tylerneylon.com/a/7date/">25.2024</a></div>
   the 27 cubie spaces of the larger <span class="math inline">\(3\times
   3\times 3\)</span> volume. But the initial configurations I tried
   failed to fit more than five boxes in the space allowed:</p>
-  <p><img src="img/img3.svg" style="width:40.0%" /></p>
+  <p><img src="img/img3.svg" class="width40" /></p>
   <p>You might be able to solve this by simply thinking about it. But
   it’s even more fun to play with a physical model.</p>
   <p>Did you know that a <span class="math inline">\(2\times 2\)</span>
   Lego brick with 2 tile-heights on top forms a perfect cube?</p>
-  <p><img src="img/annotated_lego_cube.png" style="width:50.0%" /></p>
+  <p><img src="img/annotated_lego_cube.png" class="width50" /></p>
   <p>You can build a model of the puzzle like this:</p>
-  <p><img src="img/piece_steps2.png" style="width:90.0%" /> <img
-  src="img/puzzle_box_steps.png" style="width:90.0%" /></p>
+  <p><img src="img/piece_steps2.png" class="width90" /> <img
+  src="img/puzzle_box_steps.png" class="width90" /></p>
   <p>Here’s the hodgepodge model I built with my kids’ Legos:</p>
-  <p><img src="img/home_model.jpg" /></p>
+  <p><img src="img/home_model.jpg" class="width100" /></p>
   <p>I’ll write a little about the math behind this puzzle below, but
   for now I’ll give you a vertical break so you don’t accidentally see
   the solution. Try to solve it first!</p>
