Update image sizing/spacing for html.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -79,7 +79,7 @@ href="https://tylerneylon.com/a/7date/">25.2024</a></div>
   the solution. Try to solve it first!</p>
   <p>
   <p>  </p>
-  <p><img src="img/here_be_spoilers.jpg" style="width:90.0%" /></p>
+  <p><img src="img/here_be_spoilers.jpg" class="spoiler_img" /></p>
   <p>
   <p>  </p>
   <h1 data-number="2" id="the-solution"><span
