Make the cube draggable on touch screens.

--- a/lego_puzzle/lego_puzzle.html
+++ b/lego_puzzle/lego_puzzle.html
@@ -90,7 +90,7 @@ href="https://tylerneylon.com/a/7date/">25.2024</a></div>
   <p class="caption-vcenter">
   Click to pause / unpause rotation.<br> Drag to rotate.
   </p>
-  <svg width="10" height="10" version="1.1" style="background-color:#fff" id="solution" xmlns="http://www.w3.org/2000/svg">
+  <svg width="10" height="10" version="1.1" style="background-color:#fff; touch-action: none" id="solution" xmlns="http://www.w3.org/2000/svg">
   </svg>
   </div>
   <p>The simplest way to characterize it is to notice that we’ve left
