--- a/lego_puzzle/template.html
+++ b/lego_puzzle/template.html
@@ -55,5 +55,14 @@
         margin-top:0;" frameborder="0" scrolling="no"></iframe>
     </div>
     <script type="module" src="solution.js"></script>
+    <!-- This can be useful for debugging mobile device resolutions.
+    <script>
+        window.addEventListener('DOMContentLoaded', () => {
+            let p = document.createElement('p');
+            p.textContent = 'innerWidth: ' + window.innerWidth;
+            document.body.insertBefore(p, document.body.firstChild);
+        });
+    </script>
+    -->
   </body>
 </html>
