Start section on modeling color physically.

--- a/color_notes/color_notes.html
+++ b/color_notes/color_notes.html
@@ -43,6 +43,7 @@ href="https://tylerneylon.com/a/7date/">352.2024</a></div>
       \(\newcommand{\lowerhaty}{\lower 1ex{\hat y}}\)
       \(\newcommand{\lhy}{\lower 1ex{\hat y}}\)
       \(\renewcommand{\hat}[1]{\widehat{#1}}\)
+  <p>% Started: 352.2024</p>
   <p>[ Formats: <a
   href="http://tylerneylon.com/a/color_notes/color_notes.html">html</a>
   | <a
@@ -57,6 +58,26 @@ href="https://tylerneylon.com/a/7date/">352.2024</a></div>
   <h1 data-number="1" id="questions-about-light-and-color-itself"><span
   class="header-section-number">1</span> Questions about light and color
   itself</h1>
+  <h2 data-number="1.1" id="what-is-color-physically"><span
+  class="header-section-number">1.1</span> What is color,
+  physically?</h2>
+  <p>Every photon has a wavelength, traditionally denoted by <span
+  class="math inline">\(\lambda\)</span> and measured in nm (nanometers)
+  in the context of color. This wavelength corresponds inversely with
+  the photon’s frequency, traditionally denoted by <span
+  class="math inline">\(\nu\)</span>, and measured in hertz (<span
+  class="math inline">\(1/s\)</span>).</p>
+  <p>For example, suppose we see light consisting entirely of photons
+  with the wavelength <span class="math inline">\(\lambda =
+  700\)</span>nm. This appears red to our eyes. The wavelength and
+  frequency of a photon are related by the formula</p>
+  <p><span class="math display">\[ c = \lambda \nu,\]</span></p>
+  <p>where <span class="math inline">\(c = 3\times 10^8 m/s\)</span> is
+  the speed of light.</p>
+  <h2 data-number="1.2"
+  id="my-notes-on-questions-for-this-section"><span
+  class="header-section-number">1.2</span> MY NOTES ON QUESTIONS FOR
+  THIS SECTION</h2>
   <ul>
   <li>What is color, physically?</li>
   <li>How do blacklights work?</li>
